<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="MODE" />
        <View android:background="#aaa" android:layout_width="match_parent" android:layout_height="1.0dp" android:layout_marginTop="10.0dp" />
        <Button android:textColor="#ffffff" android:gravity="left" android:id="@id/btMode" android:background="@drawable/apptheme_spinner_background_holo_dark" android:paddingLeft="20.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:text="Fischer" />
        <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dp" android:text="TIME" />
        <View android:background="#aaa" android:layout_width="match_parent" android:layout_height="1.0dp" android:layout_marginTop="10.0dp" />
        <LinearLayout android:id="@id/layoutClock1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dp">
            <TextView android:gravity="right" android:id="@id/tvClock1" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/settings_clock1" android:layout_weight="40.0" />
            <Button android:textColor="#ffffff" android:gravity="left" android:id="@id/btTimeClock1" android:background="@drawable/apptheme_spinner_background_holo_dark" android:paddingLeft="20.0dp" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginLeft="20.0dp" android:text="30:00" android:layout_weight="60.0" />
        </LinearLayout>
        <LinearLayout android:id="@id/layoutClock2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dp">
            <TextView android:gravity="right" android:id="@id/tvClock2" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/settings_clock2" android:layout_weight="40.0" />
            <Button android:textColor="#ffffff" android:gravity="left" android:id="@id/btTimeClock2" android:background="@drawable/apptheme_spinner_background_holo_dark" android:paddingLeft="20.0dp" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginLeft="20.0dp" android:text="30:00" android:layout_weight="60.0" />
        </LinearLayout>
        <LinearLayout android:id="@id/layoutIncrement" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dp">
            <TextView android:gravity="right" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/settings_delay" android:layout_weight="40.0" />
            <Button android:textColor="#ffffff" android:gravity="left" android:id="@id/btIncrement" android:background="@drawable/apptheme_spinner_background_holo_dark" android:paddingLeft="20.0dp" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginLeft="20.0dp" android:text="30:00" android:layout_weight="60.0" />
        </LinearLayout>
        <LinearLayout android:id="@id/layoutNbMoves" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dp">
            <TextView android:gravity="right" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/settings_number_of_moves" android:layout_weight="40.0" />
            <Button android:textColor="#ffffff" android:gravity="left" android:id="@id/btNbMoves" android:background="@drawable/apptheme_spinner_background_holo_dark" android:paddingLeft="20.0dp" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginLeft="20.0dp" android:text="40" android:layout_weight="60.0" />
        </LinearLayout>
        <LinearLayout android:id="@id/layoutPeriod2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dp">
            <TextView android:gravity="right" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/settings_period2" android:layout_weight="40.0" />
            <Button android:textColor="#ffffff" android:gravity="left" android:id="@id/btTimePeriod2" android:background="@drawable/apptheme_spinner_background_holo_dark" android:paddingLeft="20.0dp" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginLeft="20.0dp" android:text="30:00" android:layout_weight="60.0" />
        </LinearLayout>
        <LinearLayout android:id="@id/layoutIncrement2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dp">
            <TextView android:gravity="right" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/settings_delay" android:layout_weight="40.0" />
            <Button android:textColor="#ffffff" android:gravity="left" android:id="@id/btIncrement2" android:background="@drawable/apptheme_spinner_background_holo_dark" android:paddingLeft="20.0dp" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginLeft="20.0dp" android:text="30:00" android:layout_weight="60.0" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
